# FinTwin

./: .env.example  .gitignore  PROJECT.md  README.md  TASKS.md  pyproject.toml  requirements.txt
api/: __init__.py  main.py
api/routes/: analysis.py  auth.py  chat.py  reference.py
archive/: app_streamlit.py
data/: events.json  fintwin.db  sample_msme_data.csv  schemes.json  shocks.json
docs/: csv_schema.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: BacktestTimeline.jsx  Charts.jsx  ChatPanel.jsx  CustomShockBuilder.jsx  DataInput.jsx  ErrorBoundary.jsx  ForecastChart.jsx  HealthGauge.jsx  InsightCards.jsx  SchemeCards.jsx  Sidebar.jsx  ThemeProvider.jsx  TopBar.jsx
frontend/src/services/: api.js
src/: __init__.py  cashflow_forecast.py  csv_parser.py  database.py  health_score.py  historical_backtest.py  llm_integration.py  llm_prompts.py  metrics_engine.py  scheme_recommender.py  shock_models.py  simulation_engine.py  survival_rule.py  synthetic_data.py
tests/: test_csv_parser.py  test_integration.py  test_metrics_engine.py  test_simulation_core.py  test_task1_csv_schema.py
