[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "fintwin"
version = "3.1.0"
description = "MSME Financial Stress Simulator for Indian businesses"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "pandas>=2.0",
    "numpy>=1.24",
    "plotly>=5.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
llm = ["openai>=1.0", "google-generativeai>=0.3"]
dev = ["pytest>=7.0", "httpx>=0.24"]
all = ["fintwin[llm,dev]"]

[tool.setuptools.packages.find]
include = ["src*", "api*"]
